fixed partly invisible item in sidelist

--- a/app/styles/theme.less
+++ b/app/styles/theme.less
@@ -207,6 +207,8 @@ h2, h3 {
   font-size: @font-size-small;
   overflow-x: hidden;
   background: @gray-lighter;
+  top: 0;
+  padding-top: 30px;
 
   .nav > li {
     display: block;
